# alvan-lic

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  alvan-lic-structure.md
examples/: basic_usage.rs  cli_tool.rs  generate_key.rs
src/: error.rs  generator.rs  lib.rs  validator.rs
tests/: integration_test.rs
